platform/kube/istio-finsight-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: istio-finsight-routes
  namespace: default
spec:
  parentRefs:
    - name: istio-finsight-gateway
      namespace: default
  hostnames:
    - "finsight.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fundamental
          kind: Service
          port: 8080
